<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp">
    
    
    <ImageView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:contentDescription="logo"
	    android:src="@drawable/logo" 
	    android:layout_marginTop="0dp"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="40dp"
        android:typeface="normal"
        android:id="@+id/txtview"
        android:textColor="#f0f0f0"
        android:layout_gravity="center_horizontal"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textSize="15dp"
        android:typeface="normal"
        android:id="@+id/txtview2"
        android:textColor="#f0f0f0"
        android:layout_gravity="center_horizontal"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your"
        android:textSize="20dp"
        android:typeface="normal"
        android:id="@+id/txtview3"
        android:textColor="#f0f0f0"
        android:layout_gravity="center_horizontal"/>
    

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/username"
        android:hint="@string/username"
        android:layout_marginTop="45dp"
        android:textColor="#F0F0F0"
        android:paddingLeft="0dp"
        android:drawablePadding="5dp"
        android:textColorHint="#f0f0f0"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:textColor="#F0F0F0"
        android:paddingLeft="0dp"
        android:drawablePadding="5dp"
        android:textColorHint="#f0f0f0"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/sign"
        android:id="@+id/button"
        android:background="@drawable/selector_xml_btn_yellow"
        android:layout_gravity="center_horizontal"
        android:textColor="#094158"
        android:onClick="checkLogin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/forgot"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textColor="#F0F0F0"
        />

</LinearLayout>